fix alignment issue for menu items

--- a/src/menu/Menu.scss
+++ b/src/menu/Menu.scss
@@ -123,7 +123,6 @@
     .item-description {
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: space-around;
       flex: 3;
       padding: 10px;
